POSTform에 input태그와 label작성

--- a/practice1/public/index.html
+++ b/practice1/public/index.html
@@ -13,6 +13,12 @@
     <input type="text" id="hobby" name="hobby"><br><br>
     <input type="submit" value="전송">
   </form>
-  <form action="/post" method="POST"></form>
+  <form action="/post" method="POST">
+    <label for="postName">이름</label><br>
+    <input type="text" id="postName" name="postName"><br><br>
+    <label for="postHobby">취미</label><br>
+    <input type="text" id="postHobby" name="postHobby"><br><br>
+    <input type="submit" value="전송">
+  </form>
 </body>
 </html>
