--- a/practice3/public/index.html
+++ b/practice3/public/index.html
@@ -6,6 +6,15 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <form action="/get">
+    <input type="text" name="name" placeholder="이름"><br>
+    <input type="text" name="hobby" placeholder="취미"><br>
+    <input type="submit" value="전송">
+  </form>
+  <form action="/post" method="POST">
+    <input type="text" name="name" placeholder="이름"><br>
+    <input type="text" name="hobby" placeholder="취미"><br>
+    <input type="submit" value="전송">
+  </form>
 </body>
 </html>
