form데이터 전송시트 작성

--- a/practice4/public/index.html
+++ b/practice4/public/index.html
@@ -6,6 +6,15 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <form action="/get" method="get">
+    <input type="text" name="게임명" placeholder="게임이름을 적어주세요.">
+    <input type="text" name="특징" placeholder="특징을 적어주세요.">
+    <input type="submit" value="전송">
+  </form>
+  <form action="/post" method="post">
+    <input type="text" name="게임명" placeholder="게임이름을 적어주세요.">
+    <input type="text" name="특징" placeholder="특징을 적어주세요.">
+    <input type="submit" value="전송">
+  </form>
 </body>
 </html>
